src/objects/hw_settings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Used to enable or disable global settings. Please set them up in families will clear descriptions</description>
    <fields>
        <fullName>Bypass_Custom_AB_Flow__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Bypass Custom AB Flow</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Bypass_Custom_AB_Trigger__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Bypass Custom AB Trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Bypass_Custom_AB_Validation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Bypass Custom AB Validation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Bypass_Custom_CPQ_Flows__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to bypass custom CPQ Process Builder, workflows, and approvals</description>
        <inlineHelpText>Used to bypass custom CPQ Process Builder, workflows, and approvals</inlineHelpText>
        <label>Bypass Custom CPQ Flows</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Bypass_Custom_CPQ_Triggers__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Bypass Custom CPQ Triggers</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Bypass_Custom_CPQ_Validation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Bypass Custom CPQ Validation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Bypass_Email_Alerts__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Turns off email alerts</inlineHelpText>
        <label>Bypass Email Alerts</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Bypass_Research_Flows__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Bypass Research Flows</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Bypass_Research_Triggers__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Disables the triggers for the research objects. Used for mass imports or changes</description>
        <inlineHelpText>Disables the triggers for the research objects. Used for mass imports or changes</inlineHelpText>
        <label>Bypass Research Triggers</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Bypass_Research_Validation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Bypass Research Validation</label>
        <type>Checkbox</type>
    </fields>
    <label>Hanleywood Settings</label>
</CustomObject>